--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack": "^1.12.2"
   },
   "dependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   }
 }
